# dcmtk-android

./: Readme
dcmtk-demo/: settings.gradle
dcmtk-demo/app/: build.gradle
dcmtk-demo/app/src/main/: AndroidManifest.xml
dcmtk-demo/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
dcmtk-demo/app/src/main/cpp/include/dcmtk/config/: osconfig.h
dcmtk-demo/app/src/main/cpp/include/dcmtk/ofstd/: ofpwd.h
dcmtk-demo/app/src/main/java/com/example/dcmtkdemo/: MainActivity.kt
dcmtk-demo/app/src/main/res/values/: strings.xml
